fixed bugs, updated README, workflow, etc, remade config system, added new commands, commited stagging changes.
chore: updated workflow (thanks to @phinner), updated gradle wrapper version, updated build script for publication and mindustry v8 compatibility
doc: updated README
chore(client): now using the 'legacyCompatible' field to be always compatible
feat(server, api, common): packets received from the wrong endpoint will be discarded, added packet caching using ThreadLocals
refactor(server, api): remade listeners with a Java 21 switch syntax
refactor(all): now using unamed variable for ignored exceptions
chore(api): reduced room list timeout
fix(api): added packet queue to proxy to avoid buffer overflows, fixed potential crashes when closing a room on mobile, fixed idle system (need also a remade)
style(client): some typo fixes, comments, etc
fix(common): fixed stream builder
feat(server): remade config system for a modular one, removed independent config command, and added a generic one, added way to quiet logs if needed,
chore(server): optimization: now using a field in the connection to know the room, instead of a map, optimized room list sending, remade AutoSaver
fix(server): fixed potential npe or cache inconsistencies, fixed rate limit systems, fixed network calculation